# guard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  Dockerfile  LICENSE  NAMING_CLEANUP_COMPLETE.md  PRE_COMMIT_SETUP.md  README.md  REFACTORING_SUMMARY.md  RENAME_TO_GUARD.md  STUB_CODE_REMEDIATION_PLAN.md  VALIDATION_FIXES_SUMMARY.md  plan.md  pyproject.toml
docs/: api-reference.md  architecture.md  configuration.md  contributing.md  extensibility.md  getting-started.md  kubernetes-deployment.md  security.md  testing.md
docs/architecture/: black-box-design.md  interfaces.md
docs/examples/: advanced-scenarios.md  basic-usage.md  troubleshooting.md
examples/: cluster-registry.json.example  config.yaml.example  upgrade-spec.json.example  upgrade-spec.yaml.example
k8s/: DEPLOYMENT_CHECKLIST.md  README.md  configmap.yaml  cronjob.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  serviceaccount.yaml
scripts/: bootstrap.sh  pre-commit.sh  setup-dynamodb.sh
src/guard/: __init__.py  __main__.py
src/guard/adapters/: __init__.py  aws_adapter.py  datadog_adapter.py  dynamodb_adapter.py  gitlab_adapter.py  k8s_adapter.py
src/guard/checks/: check_orchestrator.py  check_registry.py  pre_check_engine.py
src/guard/checks/kubernetes/: __init__.py  control_plane.py  node_readiness.py  pod_health.py
src/guard/cli/: __init__.py  main.py
src/guard/clients/: aws_client.py  datadog_client.py  gitlab_client.py  istioctl.py  kubernetes_client.py
src/guard/core/: config.py  exceptions.py  models.py
src/guard/gitops/: flux_config.py  gitops_orchestrator.py  manager.py
src/guard/gitops/updaters/: __init__.py  istio_helm_updater.py
src/guard/interfaces/: __init__.py  check.py  cloud_provider.py  cloud_types.py  config_updater.py  exceptions.py  gitops_provider.py  kubernetes_provider.py  metrics_provider.py  state_store.py  validator.py
src/guard/llm/: analyzer.py  prompts.py
src/guard/registry/: cluster_registry.py  lock_manager.py
src/guard/rollback/: engine.py
src/guard/services/: __init__.py
src/guard/services/istio/: __init__.py  istio_service.py
src/guard/services/istio/checks/: __init__.py  istioctl_analyze.py  sidecar_version.py
src/guard/services/istio/validators/: __init__.py  error_rate.py  latency.py
src/guard/utils/: cluster_credentials.py  logging.py  metrics.py  rate_limiter.py  rate_limiter_init.py  retry.py  secrets.py
src/guard/validation/: engine.py  metrics_comparator.py  validation_orchestrator.py  validator_registry.py
tests/: conftest.py
tests/contracts/: test_check_contract.py
tests/integration/: README.md  __init__.py  conftest.py  test_aws_client_integration.py  test_datadog_client_integration.py  test_gitlab_client_integration.py  test_kubernetes_client_integration.py
tests/unit/: test_aws_adapter.py  test_aws_client.py  test_check_orchestrator.py  test_check_registry.py  test_cli.py  test_cluster_registry_atomic.py  test_config.py  test_control_plane.py  test_datadog_adapter.py  test_datadog_client.py  test_dynamodb_adapter.py  test_error_rate.py  test_exceptions.py  test_flux_config.py  test_gitlab_adapter.py  test_gitlab_client.py  test_gitops_orchestrator_grouping.py  test_istio_helm_updater_upgrade_spec.py  test_istio_service.py  test_istioctl.py  test_istioctl_analyze_check.py  test_k8s_adapter.py  test_kubeconfig.py  test_kubernetes_client.py  test_latency.py  test_lock_manager_enhanced.py  test_logging.py  test_metrics.py  test_models.py  test_node_readiness.py  test_pod_health.py  test_pre_check_engine.py  test_rate_limiter.py  test_rate_limiter_init.py  test_retry.py  test_rollback_engine.py  test_secrets.py  test_sidecar_version_check.py  test_upgrade_spec_models.py  test_validation_engine.py  (+2 more)
